tests/expectations/parser/program/import_fail.out
Error [EPAR0370005]: expected a program id -- found 'hello'
    --> test:1:8
     |
   1 | import hello.leo;
     |        ^^^^^
